force-app/main/default/objects/Restaurant_Table__c/Restaurant_Table__c.object-meta.xml
<CustomObject>
    <label>Restaurant Table</label>
    <pluralLabel>Restaurant Tables</pluralLabel>
    <nameField>
        <label>Table Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>