force-app/main/default/objects/Restaurant_Table__c/fields/ADA_Accessible__c.field-meta.xml
<CustomField>
    <fullName>ADA_Accessible__c</fullName>
    <label>ADA Accessible</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>