force-app/main/default/objects/Restaurant_Table__c/fields/Restaurant__c.field-meta.xml
<CustomField>
    <fullName>Restaurant__c</fullName>
    <label>Restaurant</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipName>Restaurant_Tables</relationshipName>
    <relationshipLabel>Restaurant Tables</relationshipLabel>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
</CustomField>