force-app/main/default/objects/Restaurant_Table__c/fields/Table_Type__c.field-meta.xml
<CustomField>
    <fullName>Table_Type__c</fullName>
    <label>Table Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Window</fullName>
            </value>
            <value>
                <fullName>Booth</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Patio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>